--- a/emacspeak/tvr/amphetadesk/lite/index.html
+++ b/emacspeak/tvr/amphetadesk/lite/index.html
@@ -15,26 +15,12 @@
 to_browser(qq{<h2>});
 to_browser(qq{<a href="$channel->{htmlurl}">$channel->{title}</a>});
 to_browser(qq{<em>$channel->{date_downloaded}</em>});
-to_browser(qq{</h2>\n});
-       to_browser(qq{<table>\n});
-to_browser(qq{<tr>\n});
-       # is there an email address associated with this site?
-       if ($channel->{email}) {
-to_browser(qq{               <td ><a
-       # href="mailto:$channel->{email}">Email</a></td>\n});
-}
-
-       # continue on with the rest of our header.
        # we create an encoded 'xmlurl' for our del_url.
        # this is so we don't get confused with channel
        # query_strings being interpreted as part of our own.
        my $encoded_xmlurl = encode_to_dec($channel->{xmlurl});
-       to_browser(qq{               <td><a href="$channel->{xmlurl}" >RSS</a></td>\n});
-
-       to_browser(qq{               <td ><a
-href="index.html?del_url=$encoded_xmlurl&amp;go=1">Remove</a></td>\n});
-       to_browser(qq{             </tr>\n});
-to_browser(qq{</table>\n});
+       to_browser(qq{               <a href="$channel->{xmlurl}" >RSS</a>\n});
+       to_browser(qq{<a href="index.html?del_url=$encoded_xmlurl&amp;go=1">Remove</a></h2>\n});
        # if there are no channel items, say so.
        if ( not defined($data->{item}) or scalar @{$data->{item}} <= 0) {
           to_browser(qq{         });
