--- a/emacspeak/html/emacspeak.html
+++ b/emacspeak/html/emacspeak.html
@@ -61,7 +61,7 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
     <!-- } -->
 
     <p>Emacspeak Inc (NASDOG: ESPK) announces immediate world-wide
-    availability of Emacspeak 17.0 --a powerful audio desktop for
+    availability of Emacspeak 18.0 --a powerful audio desktop for
     leveraging today's evolving semantic WWW.</p>
 
     <p>Emacspeak is a speech interface that allows visually
@@ -135,6 +135,8 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
     Announcements</a></h2>
 
     <ul>
+      <li><a href="release-18.0.html">Announcing Emacspeak 18.0
+      (GoodDog)</a></li>
       <li><a href="release-17.0.html">Announcing Emacspeak 17.0
       (HappyDog)</a></li>
            <li><a href="http://www.fonix.com/products/dectalk/rt_linux/">Emacspeak 17.0 adds support for Fonix Software Dectalk.</a></li>
