--- a/trunk/emacspeak/html/emacspeak.html
+++ b/trunk/emacspeak/html/emacspeak.html
@@ -135,21 +135,21 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
     Announcements</a></h2>
 
     <ul>
-      <li><a href="release-18.0.html">Announcing Emacspeak 18.0
+      <li><a href="releases/release-18.0.html">Announcing Emacspeak 18.0
       (GoodDog)</a></li>
-      <li><a href="release-17.0.html">Announcing Emacspeak 17.0
+      <li><a href="releases/release-17.0.html">Announcing Emacspeak 17.0
       (HappyDog)</a></li>
            <li><a href="http://www.fonix.com/products/dectalk/rt_linux/">Emacspeak 17.0 adds support for Fonix Software Dectalk.</a></li>
-      <li><a href="release-16.0.html">Announcing Emacspeak 16.0
+      <li><a href="releases/release-16.0.html">Announcing Emacspeak 16.0
       (CleverDog)</a></li>
 
-      <li><a href="release-15.0.html">Announcing Emacspeak 15.0
+      <li><a href="releases/release-15.0.html">Announcing Emacspeak 15.0
       (SmartDog)</a></li>
 
       <li><a href="applications.html" shape="rect">Speech-enabled
       Applications Catalog</a></li>
 
-      <li><a href="release-14.0.html">Announcing Emacspeak 14.0
+      <li><a href="releases/release-14.0.html">Announcing Emacspeak 14.0
       (TopDog)</a></li>
 
       <li><a href="publications/colored-paper.html">Welcome To
@@ -162,13 +162,13 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
       the Semantic WWW</a> <a href=
       "publications/semantic-www.pdf">PDF version</a></li>
 
-      <li><a href="release-13.0.html">Announcing Emacspeak 13.0
+      <li><a href="releases/release-13.0.html">Announcing Emacspeak 13.0
       (YellowLab)</a></li>
 
       <li><a href="http://www.eet.com/story/OEG20001004S0036">EE
       Times On Emacspeak And Open Source</a></li>
 
-      <li><a href="release-12.0.html">Announcing Emacspeak 12.0
+      <li><a href="releases/release-12.0.html">Announcing Emacspeak 12.0
       (GoldenDog)</a></li>
 
       <li><a href="april-2000.txt">If Emacspeak Were To Go
@@ -179,12 +179,12 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
       "talks/bazaar-99/title.html">for the presentation
       version</a>.</li>
 
-      <li><a href="release-11.0.html">Announcing Emacspeak-11.0
+      <li><a href="releases/release-11.0.html">Announcing Emacspeak-11.0
       (Aster)</a> Emacspeak support for IBM ViaVoice Outloud makes
       Linux the first zero-cost Internet access solution for blind
       and visually impaired users.</li>
 
-      <li><a href="release-10.0.html">Announcing Emacspeak-10.0
+      <li><a href="releases/release-10.0.html">Announcing Emacspeak-10.0
       (WonderDog)</a></li>
 
       <li><a href="smithsonian/study.html">Emacspeak enters
@@ -196,13 +196,13 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
       <li><a href="manual-announce.html">Announcing Emacspeak User
       Manual 2nd Edition As An Open Source Project.</a></li>
 
-      <li><a href="release-9.0.html">Announcing Emacspeak-9.0
+      <li><a href="releases/release-9.0.html">Announcing Emacspeak-9.0
       (BlackLab)</a></li>
 
-      <li><a href="release-8.0.html">Announcing Emacspeak-8.0
+      <li><a href="releases/release-8.0.html">Announcing Emacspeak-8.0
       (BlackDog)</a></li>
 
-      <li><a href="release-7.0.html">Announcing Emacspeak-7.0
+      <li><a href="releases/release-7.0.html">Announcing Emacspeak-7.0
       (Labrador)</a></li>
     </ul>
 
