*** empty log message ***

--- a/emacspeak/html/emacspeak.html
+++ b/emacspeak/html/emacspeak.html
@@ -47,7 +47,7 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
 
       <tr>
         <td colspan="3"><a href=
-        "http://www.cs.cornell.edu/home/raman">About the
+        "raman/">About the
         author</a></td>
 <td>
 <a href="http://emacspeak.sf.net/emacspeak.rss">RSS Feed</a>
@@ -302,9 +302,7 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
     used to disseminate information about emacspeak. If you use
     Emacspeak, you can subscribe by sending email to <a href=
     "mailto:emacspeak-request@cs.vassar.edu">the list request
-    address (maintained by) greg e. priest-dorman</a>. See <a href=
-    "release.html">the news page</a>for details on what's new in
-    the latest release of Emacspeak.</p>
+    address (maintained by) greg e. priest-dorman</a>. </p>
 
     <h2><a id="support" name="support">Support And
     Documentation</a></h2>
