--- a/trunk/emacspeak/html/emacspeak.html
+++ b/trunk/emacspeak/html/emacspeak.html
@@ -171,7 +171,7 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
       <li><a href="releases/release-12.0.html">Announcing Emacspeak 12.0
       (GoldenDog)</a></li>
 
-      <li><a href="april-2000.txt">If Emacspeak Were To Go
+      <li><a href="announcements/april-2000.txt">If Emacspeak Were To Go
       Commercial ... April 2000</a></li>
 
       <li><a href="talks/bazaar-99/slides.html">Emacspeak at Bazaar
