*** empty log message ***

--- a/emacspeak/html/emacspeak.html
+++ b/emacspeak/html/emacspeak.html
@@ -353,8 +353,7 @@ Speech servers
 
     <address>
       <a href=
-      "http://www.cs.cornell.edu/Info/People/raman/raman.html">T.
-      V. Raman</a> raman@cs.cornell.edu
+      "raman/">T. V. Raman</a> raman@cs.cornell.edu
     </address>
     <!-- hhmts start -->
 Last modified: Wed Jan  8 20:18:34 2003
