*** empty log message ***

--- a/emacspeak/html/releases/release-18.0.html
+++ b/emacspeak/html/releases/release-18.0.html
@@ -18,7 +18,7 @@
 
     <h2>For Immediate Release</h2>
     <p>
-      San Jose, CA, (April 29, 2003)<br>
+      San Jose, CA, (April 29 , 2003)<br>
         Emacspeak-18:   Empowering Experienced Users<br>
           --Zero cost of ownership makes priceless software affordable!
     </p>
@@ -32,11 +32,11 @@
       <tr
           style="background: yellow; text-color: navy; font-weight: bold">
         <td><a href="http://prdownloads.sourceforge.net/emacspeak/">Downloads</a></td>
-        <td><a href="info/emacspeak.html"> Reference</a></td>
-        <td><a href="install-guide/">Installation</a></td>
-        <td> <a href="user-guide/">Usage</a> </td>
-        <td><a href="tips.html">Tips</a></td>
-        <td><a href="applications.html">Tools</a></td>
+        <td><a href="../info/emacspeak.html"> Reference</a></td>
+        <td><a href="../install-guide/">Installation</a></td>
+        <td> <a href="../user-guide/">Usage</a> </td>
+        <td><a href="../tips.html">Tips</a></td>
+        <td><a href="../applications.html">Tools</a></td>
         <td> <a href= "http://www.cs.vassar.edu/~priestdo/emacspeak/">Support</a></td>
       </tr>
       <tr>
@@ -45,7 +45,7 @@
                alt= "EMACSPEAK Logo"/></td>
       </tr>
       <tr>
-        <td colspan="4"><a href="raman.html">About the author</a></td>
+        <td colspan="4"><a href="raman/">About the author</a></td>
         <td colspan="3">
           <a href= "http://sourceforge.net/projects/emacspeak">
             <IMG src="http://sourceforge.net/sflogo.php?group_id=2238"          
@@ -266,7 +266,7 @@ customer demand.
         <a href="mailto:raman@cs.cornell.edu">Email: raman@cs.cornell.edu</a>
       </address>
       <!-- hhmts start -->
-Last modified: Tue Apr 29 18:00:44 2003
+Last modified: Mon Nov 18 19:02:15 2002
 <!-- hhmts end -->
   </body> </html>
 <!--
