--- a/trunk/emacspeak/html/releases/release-18.0.html
+++ b/trunk/emacspeak/html/releases/release-18.0.html
@@ -206,7 +206,7 @@ Emacspeak-13.0 --codenamed
     <h2><a name="about">About Emacspeak</a></h2>
     <p>
       Based at Cornell (NY) <a
-      href="http://cs.cornell.edu/home/raman">
+      href="http://www.cs.cornell.edu/home/raman">
       http://cs.cornell.edu/home/raman</a> --home to
       Auditory User Interfaces (AUI) on the WWW-- Emacspeak
       is mirrored world-wide by an international network of
