*** empty log message ***

--- a/emacspeak/html/emacspeak.html
+++ b/emacspeak/html/emacspeak.html
@@ -139,7 +139,7 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
       (GoodDog)</a></li>
       <li><a href="releases/release-17.0.html">Announcing Emacspeak 17.0
       (HappyDog)</a></li>
-           <li><a href="http://www.fonix.com/products/dectalk/rt_linux/">Emacspeak 17.0 adds support for Fonix Software Dectalk.</a></li>
+           <li><strong>Emacspeak 17.0 adds support for Fonix Software Dectalk.</strong></li>
       <li><a href="releases/release-16.0.html">Announcing Emacspeak 16.0
       (CleverDog)</a></li>
 
@@ -334,8 +334,7 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
     <p>The Emacspeak distribution comes with speech servers for IBM
     ViaVoice TTS (Text To Speech using a soundcard) as well as the
     Dectalk family of hardware speech synthesizers. 
-Starting with Emacspeak 17.0 (HappyDog), the system also includes support for 
-<a href="http://www.fonix.com/products/dectalk/rt_linux/">Fonix Software Dectalk</a>.
+Starting with Emacspeak 17.0 (HappyDog), the system also includes support for <strong> Fonix Software Dectalk</strong>.
 Speech servers
     for other synthesizers are available from <a href=
     "http://www.mv.com/ipusers/vanzandt/">Jim Van Zandt's home
