--- a/trunk/emacspeak/info/introducing-emacspeak.html
+++ b/trunk/emacspeak/info/introducing-emacspeak.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<head>
+<head><link rel="http://www.w3.org/StyleSheets/Core/Modernist" type="text/css">
 <title>Introducing Emacspeak</title>
 <meta http-equiv="Content-Type" content="text/html">
 <meta name="description" content="Introducing Emacspeak">
@@ -30,14 +30,14 @@ all copies.
    </blockquote>
 -->
 </head>
-<body>
+<body><p> <a href="http://emacspeak.sf.net"><img width="150" height="216" src="emacspeak.jpg" alt= "EMACSPEAK --Complete Audio Desktop"></a> </p>
 <h1 class="settitle">Introducing Emacspeak</h1>
 <div class="node">
 <p><hr>
-Node: <a name="Top">Top</a>,
-Next: <a rel="next" accesskey="n" href="#This%20Essay">This Essay</a>,
-Previous: <a rel="previous" accesskey="p" href="#dir">(dir)</a>,
-Up: <a rel="up" accesskey="u" href="#dir">(dir)</a>
+Node:<a name="Top">Top</a>,
+Next:<a rel="next" accesskey="n" href="#This%20Essay">This Essay</a>,
+Previous:<a rel="previous" accesskey="p" href="#dir">(dir)</a>,
+Up:<a rel="up" accesskey="u" href="#dir">(dir)</a>
 <br>
 </div>
 
@@ -81,10 +81,10 @@ It is not a substitute for the Emacspeak manual, but an addendum.
 
 <div class="node">
 <p><hr>
-Node: <a name="This%20Essay">This Essay</a>,
-Next: <a rel="next" accesskey="n" href="#Questions">Questions</a>,
-Previous: <a rel="previous" accesskey="p" href="#Top">Top</a>,
-Up: <a rel="up" accesskey="u" href="#Top">Top</a>
+Node:<a name="This%20Essay">This Essay</a>,
+Next:<a rel="next" accesskey="n" href="#Questions">Questions</a>,
+Previous:<a rel="previous" accesskey="p" href="#Top">Top</a>,
+Up:<a rel="up" accesskey="u" href="#Top">Top</a>
 <br>
 </div>
 
@@ -145,10 +145,10 @@ involves.  I think what I describe is correct; but am not sure.
 
 <div class="node">
 <p><hr>
-Node: <a name="Questions">Questions</a>,
-Next: <a rel="next" accesskey="n" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>,
-Previous: <a rel="previous" accesskey="p" href="#This%20Essay">This Essay</a>,
-Up: <a rel="up" accesskey="u" href="#Top">Top</a>
+Node:<a name="Questions">Questions</a>,
+Next:<a rel="next" accesskey="n" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>,
+Previous:<a rel="previous" accesskey="p" href="#This%20Essay">This Essay</a>,
+Up:<a rel="up" accesskey="u" href="#Top">Top</a>
 <br>
 </div>
 
@@ -192,10 +192,10 @@ it might be.
 
 <div class="node">
 <p><hr>
-Node: <a name="Introducing%20Emacspeak">Introducing Emacspeak</a>,
-Next: <a rel="next" accesskey="n" href="#Free%20Books">Free Books</a>,
-Previous: <a rel="previous" accesskey="p" href="#Questions">Questions</a>,
-Up: <a rel="up" accesskey="u" href="#Top">Top</a>
+Node:<a name="Introducing%20Emacspeak">Introducing Emacspeak</a>,
+Next:<a rel="next" accesskey="n" href="#Free%20Books">Free Books</a>,
+Previous:<a rel="previous" accesskey="p" href="#Questions">Questions</a>,
+Up:<a rel="up" accesskey="u" href="#Top">Top</a>
 <br>
 </div>
 
@@ -251,10 +251,10 @@ See <a href="emacspeak.html#Top">Emacspeak</a>.
 
 <div class="node">
 <p><hr>
-Node: <a name="Info%20and%20Help">Info and Help</a>,
-Next: <a rel="next" accesskey="n" href="#Movement">Movement</a>,
-Previous: <a rel="previous" accesskey="p" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>,
-Up: <a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
+Node:<a name="Info%20and%20Help">Info and Help</a>,
+Next:<a rel="next" accesskey="n" href="#Movement">Movement</a>,
+Previous:<a rel="previous" accesskey="p" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>,
+Up:<a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
 <br>
 </div>
 
@@ -335,10 +335,10 @@ otherwise, you will not hear the left-brace spoken.
 
 <div class="node">
 <p><hr>
-Node: <a name="Movement">Movement</a>,
-Next: <a rel="next" accesskey="n" href="#Keybindings">Keybindings</a>,
-Previous: <a rel="previous" accesskey="p" href="#Info%20and%20Help">Info and Help</a>,
-Up: <a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
+Node:<a name="Movement">Movement</a>,
+Next:<a rel="next" accesskey="n" href="#Keybindings">Keybindings</a>,
+Previous:<a rel="previous" accesskey="p" href="#Info%20and%20Help">Info and Help</a>,
+Up:<a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
 <br>
 </div>
 
@@ -368,10 +368,10 @@ movement.
 
 <div class="node">
 <p><hr>
-Node: <a name="Keybindings">Keybindings</a>,
-Next: <a rel="next" accesskey="n" href="#X%20Windows%20Keybindings">X Windows Keybindings</a>,
-Previous: <a rel="previous" accesskey="p" href="#Movement">Movement</a>,
-Up: <a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
+Node:<a name="Keybindings">Keybindings</a>,
+Next:<a rel="next" accesskey="n" href="#X%20Windows%20Keybindings">X Windows Keybindings</a>,
+Previous:<a rel="previous" accesskey="p" href="#Movement">Movement</a>,
+Up:<a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
 <br>
 </div>
 
@@ -437,10 +437,10 @@ into one of your boot scripts.)
 
 <div class="node">
 <p><hr>
-Node: <a name="X%20Windows%20Keybindings">X Windows Keybindings</a>,
-Next: <a rel="next" accesskey="n" href="#Speech%20Rate">Speech Rate</a>,
-Previous: <a rel="previous" accesskey="p" href="#Keybindings">Keybindings</a>,
-Up: <a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
+Node:<a name="X%20Windows%20Keybindings">X Windows Keybindings</a>,
+Next:<a rel="next" accesskey="n" href="#Speech%20Rate">Speech Rate</a>,
+Previous:<a rel="previous" accesskey="p" href="#Keybindings">Keybindings</a>,
+Up:<a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
 <br>
 </div>
 
@@ -474,10 +474,10 @@ to be explained.)
 
 <div class="node">
 <p><hr>
-Node: <a name="Speech%20Rate">Speech Rate</a>,
-Next: <a rel="next" accesskey="n" href="#Basic%20Commands%20Reference">Basic Commands Reference</a>,
-Previous: <a rel="previous" accesskey="p" href="#X%20Windows%20Keybindings">X Windows Keybindings</a>,
-Up: <a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
+Node:<a name="Speech%20Rate">Speech Rate</a>,
+Next:<a rel="next" accesskey="n" href="#Basic%20Commands%20Reference">Basic Commands Reference</a>,
+Previous:<a rel="previous" accesskey="p" href="#X%20Windows%20Keybindings">X Windows Keybindings</a>,
+Up:<a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
 <br>
 </div>
 
@@ -513,10 +513,10 @@ him about typing <kbd>Control-u</kbd> first.
 
 <div class="node">
 <p><hr>
-Node: <a name="Basic%20Commands%20Reference">Basic Commands Reference</a>,
-Next: <a rel="next" accesskey="n" href="#Characteristics">Characteristics</a>,
-Previous: <a rel="previous" accesskey="p" href="#Speech%20Rate">Speech Rate</a>,
-Up: <a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
+Node:<a name="Basic%20Commands%20Reference">Basic Commands Reference</a>,
+Next:<a rel="next" accesskey="n" href="#Characteristics">Characteristics</a>,
+Previous:<a rel="previous" accesskey="p" href="#Speech%20Rate">Speech Rate</a>,
+Up:<a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
 <br>
 </div>
 
@@ -555,10 +555,10 @@ for all this.
 
 <div class="node">
 <p><hr>
-Node: <a name="Characteristics">Characteristics</a>,
-Next: <a rel="next" accesskey="n" href="#Emacs%20manual">Emacs manual</a>,
-Previous: <a rel="previous" accesskey="p" href="#Basic%20Commands%20Reference">Basic Commands Reference</a>,
-Up: <a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
+Node:<a name="Characteristics">Characteristics</a>,
+Next:<a rel="next" accesskey="n" href="#Emacs%20manual">Emacs manual</a>,
+Previous:<a rel="previous" accesskey="p" href="#Basic%20Commands%20Reference">Basic Commands Reference</a>,
+Up:<a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
 <br>
 </div>
 
@@ -609,9 +609,9 @@ he will keep it in mind for the future.)
 
 <div class="node">
 <p><hr>
-Node: <a name="Emacs%20manual">Emacs manual</a>,
-Previous: <a rel="previous" accesskey="p" href="#Characteristics">Characteristics</a>,
-Up: <a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
+Node:<a name="Emacs%20manual">Emacs manual</a>,
+Previous:<a rel="previous" accesskey="p" href="#Characteristics">Characteristics</a>,
+Up:<a rel="up" accesskey="u" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>
 <br>
 </div>
 
@@ -751,10 +751,10 @@ catastrophic mistakes.
 
 <div class="node">
 <p><hr>
-Node: <a name="Free%20Books">Free Books</a>,
-Next: <a rel="next" accesskey="n" href="#An%20Initialization%20File">An Initialization File</a>,
-Previous: <a rel="previous" accesskey="p" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>,
-Up: <a rel="up" accesskey="u" href="#Top">Top</a>
+Node:<a name="Free%20Books">Free Books</a>,
+Next:<a rel="next" accesskey="n" href="#An%20Initialization%20File">An Initialization File</a>,
+Previous:<a rel="previous" accesskey="p" href="#Introducing%20Emacspeak">Introducing Emacspeak</a>,
+Up:<a rel="up" accesskey="u" href="#Top">Top</a>
 <br>
 </div>
 
@@ -823,10 +823,10 @@ I run the <code>set-buffer-file-coding-system</code> command on it:
 
 <div class="node">
 <p><hr>
-Node: <a name="An%20Initialization%20File">An Initialization File</a>,
-Next: <a rel="next" accesskey="n" href="#Software%20Synthesizers">Software Synthesizers</a>,
-Previous: <a rel="previous" accesskey="p" href="#Free%20Books">Free Books</a>,
-Up: <a rel="up" accesskey="u" href="#Top">Top</a>
+Node:<a name="An%20Initialization%20File">An Initialization File</a>,
+Next:<a rel="next" accesskey="n" href="#Software%20Synthesizers">Software Synthesizers</a>,
+Previous:<a rel="previous" accesskey="p" href="#Free%20Books">Free Books</a>,
+Up:<a rel="up" accesskey="u" href="#Top">Top</a>
 <br>
 </div>
 
@@ -1023,10 +1023,10 @@ file, write the expression as:
 
 <div class="node">
 <p><hr>
-Node: <a name="Software%20Synthesizers">Software Synthesizers</a>,
-Next: <a rel="next" accesskey="n" href="#Installation">Installation</a>,
-Previous: <a rel="previous" accesskey="p" href="#An%20Initialization%20File">An Initialization File</a>,
-Up: <a rel="up" accesskey="u" href="#Top">Top</a>
+Node:<a name="Software%20Synthesizers">Software Synthesizers</a>,
+Next:<a rel="next" accesskey="n" href="#Installation">Installation</a>,
+Previous:<a rel="previous" accesskey="p" href="#An%20Initialization%20File">An Initialization File</a>,
+Up:<a rel="up" accesskey="u" href="#Top">Top</a>
 <br>
 </div>
 
@@ -1077,9 +1077,9 @@ known-to-work Emacs version 20.7 handy.)
 
 <div class="node">
 <p><hr>
-Node: <a name="Installation">Installation</a>,
-Previous: <a rel="previous" accesskey="p" href="#Software%20Synthesizers">Software Synthesizers</a>,
-Up: <a rel="up" accesskey="u" href="#Top">Top</a>
+Node:<a name="Installation">Installation</a>,
+Previous:<a rel="previous" accesskey="p" href="#Software%20Synthesizers">Software Synthesizers</a>,
+Up:<a rel="up" accesskey="u" href="#Top">Top</a>
 <br>
 </div>
 
