*** empty log message ***

--- a/emacspeak/info/emacspeak.html
+++ b/emacspeak/info/emacspeak.html
@@ -113,7 +113,7 @@ Up:<a rel="up" accesskey="u" href="#Announce">Announce</a>
 <h3 class="section">Authoring Guidelines</h3>
 
    <p>For this manual to hang together and make sense to the new user at whom
-it is targetted, contributors need to stick to a consistent style. 
+it is targeted, contributors need to stick to a consistent style. 
 If you plan to contribute content, you should take some time to read the
 existing sections -note that many of these are skeletal and
 the first contributions will be to flesh these sections out.
@@ -553,7 +553,7 @@ Pronounces character phonetically unless  called with a PREFIX arg.
 With prefix ARG, speaks the rest of the word from point. 
 Negative prefix arg speaks from start of word to point. 
 If executed  on the same buffer position a second time, the word is
-spelt instead of being spoken.
+spelled instead of being spoken.
 
      <br><dt><kbd> control e l </kbd>
      <dd>emacspeak-speak-line
@@ -1317,7 +1317,7 @@ building block for the entire desktop.  Every Emacs buffer is searchable
 via a uniform and powerful search interface.  Emacs' incremental search
 works efficiently and consistently to enable you locate "objects" of
 interest either within a given document or to locate a given object from
-amongst the various objects that are currently open on the Emacspeak
+among the various objects that are currently open on the Emacspeak
 desktop.  This is <b>very powerful</b> -where a GUI user is typically
 limited to quickly locating an object from a relatively small collection
 -the size of the collection being a direct function of available
@@ -1455,12 +1455,12 @@ Up:<a rel="up" accesskey="u" href="#Top">Top</a>
 <h2 class="chapter">Emacs Packages.</h2>
 
    <p>Emacs - The extensible, self-documenting editor, derives its
-functionality from its powerful extension mechnaism. This extension
+functionality from its powerful extension mechanism. This extension
 mechanism is used to implement many user-level applications such as mail
 readers, WWW browsers, software development environments and so on. 
 This chapter gives directions on how to locate the right Emacs package
 for addressing specific tasks.  The chapter is organized into logical
-sections that each pertain to a specific class of tasks; in dividual
+sections that each pertain to a specific class of tasks; in individual
 subsections within a section give a brief overview of particular Emacs
 packages that have been speech-enabled.
 
@@ -1512,7 +1512,7 @@ Up:<a rel="up" accesskey="u" href="#Document%20Authoring">Document Authoring</a>
    <p>Before authoring a document, decide its primary audience
 if the document contains relatively simple content e.g., no mathematical
 equations etc. 
-and is primarily targetted at the WWW,  you are probably better off
+and is primarily targeted at the WWW,  you are probably better off
 using HTML. 
 You can create well-structured HTML documents with the help of package
 <code>html-helper-mode</code> available from
@@ -1535,7 +1535,7 @@ to format the document for good visual presentation.
 
    <p>The auctex package is an Emacs extension that facilitates authoring and
 maintaining structured documents in TeX and LaTeX.  Package
-<code>bibtex</code> facilitates maintainance and use of <code>bibtex</code>
+<code>bibtex</code> facilitates maintenance and use of <code>bibtex</code>
 bibliography databases.  The Texinfo package allows creation of software
 documentation that is suitable for both printing as well as online
 viewing as hypertext.  Emacspeak speech-enables packages <code>auctex</code>,
@@ -1598,7 +1598,7 @@ Up:<a rel="up" accesskey="u" href="#Document%20Authoring">Document Authoring</a>
    <p>Incremental search, a process by which the system prompts the user for a
 search string and moves the selection to the next available match while
 allowing the user to add more characters to the search string, is the
-search technique of choice amongst most Emacs users.  As the system
+search technique of choice among most Emacs users.  As the system
 successively finds each match and provides the user the option of
 continuing the search.  Incremental search is a more complex instance of
 traditional search interaction because in addition to either stopping or
@@ -2100,7 +2100,7 @@ Emacspeak.
 to <kbd>C-e C-o</kbd>.
 
    <p>This command switches to a special buffer that has OCR
-commands bounds to single keystrokes- see the ke-binding
+commands bounds to single keystrokes- see the key-binding
 list at the end of this description.  Use Emacs online help
 facility to look up help on these commands.
 
@@ -2206,7 +2206,7 @@ Up:<a rel="up" accesskey="u" href="#Top">Top</a>
    <p>You can use the terminal emulator mode to run arbitrary terminal-based
 programs from within Emacs.  You open a terminal emulator buffer using
 M-x term, with an extra carriage return to accept the default shell
-(such as bash).  (Incidently, don't confuse this command with M-x
+(such as bash).  (Incidentally, don't confuse this command with M-x
 terminal-emulator, which starts an older terminal emulator mode not
 supported by Emacspeak.)
 
@@ -2879,7 +2879,7 @@ Interactive PREFIX arg makes the new setting global.
      <p>Toggle state of the speech device between being quiet and talkative. 
 Useful if you want to continue using an Emacs session that has
 emacspeak loaded but wish to make the speech shut up. 
-Optional argument PREFIX specifies whether speech is turned off in the current buffer o rin all buffers. 
+Optional argument PREFIX specifies whether speech is turned off in the current buffer or in all buffers. 
 </td></tr>
 </table>
 
@@ -3119,7 +3119,7 @@ for commands defined in module  emacspeak-aumix.
 <kbd> control e ( </kbd>
 
      <p>Setup output parameters of the auditory display. 
-Luanch this tool while you have auditory output on
+ Launch this tool while you have auditory output on
 multiple channels playing so you can
 adjust the settings to your preference.  Hit q to quit when
 you are done. 
@@ -5903,7 +5903,7 @@ Move back by specified number of minutes.
 </table>
 <table width="95%" align="center">
 <tr><td>
-Forw by ARG minutes. 
+Forward by ARG minutes. 
 </td></tr>
 </table>
 
@@ -6168,7 +6168,7 @@ Pick a short but meaningful name.
 </table>
 <table width="95%" align="center">
 <tr><td>
-Launch dired on OCR workng directory. 
+Launch dired on OCR working directory. 
 </td></tr>
 </table>
 
@@ -6244,7 +6244,7 @@ to an appropriately named file.
 Scan in a page and run OCR engine on it. 
 Use this command once you've verified that the separate
 steps of acquiring an image and running the OCR engine work
-corectly by themselves. 
+correctly by themselves. 
 </td></tr>
 </table>
 
@@ -6482,7 +6482,7 @@ Clear all current pronunciation dictionaries.
 </table>
 <table width="95%" align="center">
 <tr><td>
-Define buffer local pronounciation. 
+Define buffer local pronunciation. 
 Argument WORD specifies the word which should be pronounced as specified by PRONUNCIATION. 
 </td></tr>
 </table>
@@ -6589,7 +6589,7 @@ Writes out the persistent emacspeak pronunciation dictionaries.
 <table width="95%" align="center">
 <tr><td>
 Toggle use of pronunciation dictionaries in current buffer. 
-Pronunciations can be dfined on a per file, per directory and/or per
+Pronunciations can be defined on a per file, per directory and/or per
 mode basis. 
 Pronunciations are activated on a per buffer basis. 
 Turning on the use of pronunciation dictionaries results in emacspeak
@@ -6790,7 +6790,7 @@ completions. Hit space to use this completion list.
      <p>If using TRPlayer, you can either give one-shot commands
 using command emacspeak-realaudio available from anywhere on
 the audio desktop as `C-e ;'. 
-Alternatively, switch to buffer *realaudo* using
+Alternatively, switch to buffer *realaudio* using
 `C-e ;;' if you wish to issue many
 navigation commands.  Note that buffer *realaudio* uses a
 special major mode that provides the various navigation
@@ -8027,7 +8027,7 @@ any other key to speak entire line.
 <p>
 <table width="100%">
 <tr>
-<td align="left"><b>emacspeak-speak-line-number-obselete</b><i> </i>(<i></i>)<i>
+<td align="left"><b>emacspeak-speak-line-number-obsolete</b><i> </i>(<i></i>)<i>
      </i></td>
 <td align="right">Interactive Command</td>
 </tr>
@@ -8096,7 +8096,7 @@ if `emacspeak-speak-message-again-should-copy-to-kill-ring' is set.
 <tr><td>
 <kbd> control e @ </kbd>
 
-     <p>Set up rin-at-time to speak message at specified time. 
+     <p>Set up ring-at-time to speak message at specified time. 
 Provides simple stop watch functionality in addition to other things. 
 See documentation for command run-at-time for details on time-spec. 
 </td></tr>
@@ -8599,7 +8599,7 @@ Optional interactive prefix invokes world clock.
 <table width="95%" align="center">
 <tr><td>
 Locate paragraphs and voice annotate the first word. 
-Here, paragraph is taken to mean a chunk of text preceeded by a blank line. 
+Here, paragraph is taken to mean a chunk of text preceded by a blank line. 
 Useful to do this before you listen to an entire buffer. 
 </td></tr>
 </table>
@@ -12842,7 +12842,7 @@ hits.
 If you define a file local variable
 called `emacspeak-occur-pattern' that holds a regular expression
 that matches  lines of interest, you can use this command to conveniently
-run `how-many'to count  matching header lines. 
+run `how-many' to count  matching header lines. 
 With interactive prefix arg, prompts for and remembers the file local pattern. 
 </td></tr>
 </table>
@@ -12956,7 +12956,7 @@ Run rpm -qi on current dired entry.
 <p>
 <table width="100%">
 <tr>
-<td align="left"><b>emacspeak-wizards-show-environment-vvariable</b><i> </i>(<i>V</i>)<i>
+<td align="left"><b>emacspeak-wizards-show-environment-variable</b><i> </i>(<i>V</i>)<i>
      </i></td>
 <td align="right">Interactive Command</td>
 </tr>
@@ -13349,6 +13349,20 @@ The player is placed in a buffer in emacspeak-m-player-mode.
      <p>Speak current field. 
 A field is
 defined  by Emacs 21. 
+</td></tr>
+</table>
+
+<p>
+<table width="100%">
+<tr>
+<td align="left"><b>emacspeak-wizards-show-environment-vvariable</b><i> </i>(<i></i>)<i>
+     </i></td>
+<td align="right">Interactive Command</td>
+</tr>
+</table>
+<table width="95%" align="center">
+<tr><td>
+Display value of specified environment variable. 
 </td></tr>
 </table>
 
@@ -14133,7 +14147,7 @@ Error personality for ERC.
 </table>
 <table width="95%" align="center">
 <tr><td>
-Set to T if you dont want to see notifcation messages from the
+Set to T if you dont want to see notification  messages from the
 server. 
 </td></tr>
 </table>
@@ -14453,7 +14467,7 @@ These options are customizable via Emacs' Custom interface.
 </table>
 <table width="95%" align="center">
 <tr><td>
-Persnality to indicate terminal bold. 
+Personality to indicate terminal bold. 
 </td></tr>
 </table>
 
@@ -16781,7 +16795,7 @@ These options are customizable via Emacs' Custom interface.
 <table width="95%" align="center">
 <tr><td>
 File used to save Emacspeak clipboard. 
-The emacspeak clipboard provides a convenient mechnaism for exchanging
+The emacspeak clipboard provides a convenient mechanism for exchanging
 information between different Emacs sessions. 
 </td></tr>
 </table>
@@ -16841,7 +16855,7 @@ Pattern from which name of local download directory is build.
 <tr><td>
 TTS server to use in an emergency. 
 Set this to a TTS server that is known to work at all times. 
-If you are debugging another speech servre and that server
+If you are debugging another speech server and that server
 gets wedged for some reason,
 you can use command emacspeak-emergency-tts-restart
 to get speech back using the reliable TTS server. 
