--- a/emacspeak/info/introducing-emacspeak.html
+++ b/emacspeak/info/introducing-emacspeak.html
@@ -360,7 +360,7 @@ deletion keys, are reasonably easy for English speakers to learn,
 since they use English language mnemonics:  <kbd>Control-f</kbd> to move
 forward a character, <kbd>Meta-f</kbd> to move forward a word.  (Meta-f is
 usually written as <kbd>M-f</kbd>.)  p is for previous, n is for next, b is
-for backwards, and d is for delete.
+for backward, and d is for delete.
 
    <p>Control key commands are often (but not always) for character
 movement;  Meta key commands are often (but not always) for word
@@ -599,7 +599,7 @@ sitting.
    <p>(That quotation is from the Info node "On Reading this Text" in the
 Info manual that introduces programming in Emacs Lisp:
 
-<pre class="smallexample">     (info "(eintr)On Reading this Text")
+<pre class="smallexample">     (info "(entr)On Reading this Text")
      </pre>
 
    <p>I wrote that text "as an elementary introduction for people who are
