*** empty log message ***

--- a/emacspeak/info/introducing-emacspeak.html
+++ b/emacspeak/info/introducing-emacspeak.html
@@ -28,7 +28,7 @@ copyright notice and this permission notice are preserved on
 all copies.
 
    </blockquote>
--->
+   -->
 </head>
 <body><p> <a href="http://emacspeak.sf.net"><img width="150" height="216" src="emacspeak.jpg" alt= "EMACSPEAK --Complete Audio Desktop"></a> </p>
 <h1 class="settitle">Introducing Emacspeak</h1>
@@ -65,7 +65,7 @@ copyright notice and this permission notice are preserved on
 all copies.
 
    </blockquote>
-
+   
    <p>This essay is about Emacspeak and how to introduce it to a friend. 
 It is not a substitute for the Emacspeak manual, but an addendum.
 
@@ -599,7 +599,7 @@ sitting.
    <p>(That quotation is from the Info node "On Reading this Text" in the
 Info manual that introduces programming in Emacs Lisp:
 
-<pre class="smallexample">     (info "(entr)On Reading this Text")
+<pre class="smallexample">     (info "(eintr)On Reading this Text")
      </pre>
 
    <p>I wrote that text "as an elementary introduction for people who are
