--- a/trunk/emacspeak/html/emacspeak.html
+++ b/trunk/emacspeak/html/emacspeak.html
@@ -250,7 +250,12 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
       <li><a href="publications/semantic-www.html">Speech-enabling
       the Semantic WWW</a> <a href=
       "publications/semantic-www.pdf">PDF version</a></li>
-
+<li><a href="acb-19991204-raman.mp3">ACB Live Interview</a>
+      Describes  audio formatting, speech-enabling applications
+      and the overall philosophy behind Linux/Emacspeak</a>
+      (local copy of 
+<strong>http://www.acbradio.org/archives/blindline/raman.mp3</strong>).
+</li>
       <li><a href="talks/chi96.pdf">CHI 96 Presentation</a> You can
       also get a <a href="talks/chi96.txt">text version</a> of the
       slides.</li>
