--- a/emacspeak/html/emacspeak.html
+++ b/emacspeak/html/emacspeak.html
@@ -253,6 +253,7 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
 <li><a href="acb-19991204-raman.mp3">ACB Live Interview</a>
       Describes  audio formatting, speech-enabling applications
       and the overall philosophy behind Linux/Emacspeak</a>
+      December 4, 199
       (local copy of 
 <strong>http://www.acbradio.org/archives/blindline/raman.mp3</strong>).
 </li>
