--- a/trunk/emacspeak/html/emacspeak.html
+++ b/trunk/emacspeak/html/emacspeak.html
@@ -13,6 +13,15 @@ href="http://emacspeak.sf.net/emacspeak.rss"/>
     <link rel="stylesheet" href=
     "http://www.w3.org/StyleSheets/Core/Chocolate" type=
     "text/css" />
+<style type="text/css">
+body	{	
+background-image: url(http://emacspeak.sf.net/emacspeak.jpg);
+background-position: top left;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+	}	
+
+    </style>
   </head>
 
   <body>
